@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.4-0.1
-Date: 2009-07-03
+Version: 0.4-0.2
+Date: 2009-07-04
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0), methods
