@@ -30,7 +30,7 @@ export(
        "readReut21578XML",
        "readReut21578XMLasPlain",
        "readRCV1",
-       "readNewsgroup",
+       "readMail",
        "readGmane",
        "readPDF",
        "readTabular",
@@ -172,7 +172,7 @@ exportClasses("TextDocument",
               "XMLTextDocument",
               "Reuters21578Document",
               "RCV1Document",
-              "NewsgroupDocument",
+              "MailDocument",
               "StructuredTextDocument",
               "Corpus",
               "MetaDataNode",
