@@ -1,23 +1,22 @@
-\name{readNewsgroup}
-\alias{readNewsgroup}
-\title{Read In a Newsgroup Document}
+\name{readMail}
+\alias{readMail}
+\title{Read In an E-Mail Document}
 \description{
-  Returns a function which reads in a newsgroup document as found in the
-  \acronym{UCI} \acronym{KDD} newsgroup data set.
+  Returns a function which reads in an electronic mail document.
 }
 \usage{
-readNewsgroup(DateFormat = "\%d \%B \%Y \%H:\%M:\%S", ...)
+readMail(DateFormat = "\%d \%B \%Y \%H:\%M:\%S", ...)
 }
 \arguments{
-  \item{DateFormat}{the format of the Date header in the newsgroup document.}
+  \item{DateFormat}{the format of the Date header in the mail document.}
   \item{\dots}{arguments for the generator function.}
 }
 \details{
   Formally this function is a function generator, i.e., it returns a
-  function (which reads in a newsgroup document) with a well-defined
+  function (which in turn reads in a mail document) with a well-defined
   signature, but can access passed over arguments (e.g., to specify the
-  format of the Date header in the newsgroup document via
-  \code{DateFormat}) via lexical scoping.
+  format of the Date header in the e-mail via \code{DateFormat}) via
+  lexical scoping.
 }
 \value{
   A \code{function} with the signature \code{elem, language, id}:
@@ -30,7 +29,7 @@ readNewsgroup(DateFormat = "\%d \%B \%Y \%H:\%M:\%S", ...)
   \item{id}{A \code{character} vector representing a unique identification
     string for the returned text document.}
 
-  The function returns a \code{NewsgroupDocument} representing
+  The function returns a \code{MailDocument} representing
   \code{content}.
 }
 \seealso{
