@@ -1,5 +1,11 @@
                         Dear Emacs, please make this -*-Text-*- mode!
 
+                CHANGES IN tm VERSION 0.4-1
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o   The reader function readNewsgroup is renamed to readMail.
+
                 CHANGES IN tm VERSION 0.4
 
 SIGNIFICANT USER-VISIBLE CHANGES
