@@ -1,3 +1,8 @@
+2009-07-04  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/reader.R (readNewsgroup): Rename to readMail as newsgroup
+	postings are basically e-mails with some extra headers.
+
 2009-07-03  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/transform.R: Move removeCitation, removeMultipart, and
